@@ -16,13 +16,7 @@ perl:
   - "5.18"
   - "5.16"
   - "5.14"
-  - "5.12"
-  - "5.10"
-matrix:
-  allow_failures:
-    # - perl: blead
-    - perl: "5.12"
-    - perl: "5.10"
+jobs:
   fast_finish: 1
 env:
   global:
