@@ -205,7 +205,7 @@ prefix = share/profiles/default
 :version = 0.103
 installer = MakeMaker::Fallback
 installer = ModuleBuildTiny ; not MBT::Fallback because Devel::CheckBin requires configure-requires to be satisfied
-Test::MinimumVersion.max_target_perl = 5.010100
+Test::MinimumVersion.max_target_perl = 5.013002     ; may go higher in the future
 Test::ReportPrereqs.include[0] = Dist::CheckConflicts
 Test::ReportPrereqs.include[1] = Pod::Elemental::PerlMunger
 Test::ReportPrereqs.include[2] = Text::Template
