@@ -198,7 +198,8 @@ sub _pause_download_url {
   my $self = shift;
   my ($username, $password) = @{$self->_pause_config}{qw(user password)};
   return if not $username or not $password;
-  'http://'.$username.':'.uri_escape($password).'@pause.perl.org/pub/PAUSE/authors/id/'.substr($username, 0, 1).'/'.substr($username,0,2).'/'.$username.'/%a';
+  $password = uri_escape($password) =~ s/%/%%/gr;
+  'http://'.$username.':'.$password.'@pause.perl.org/pub/PAUSE/authors/id/'.substr($username, 0, 1).'/'.substr($username,0,2).'/'.$username.'/%a';
 }
 
 # configs are applied when plugins match ->isa($key) or ->does($key)
