@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - properly escape the escaped PAUSE download URL (sorry again Olaf!)
 
 0.157     2020-05-27 20:46:58Z
           - properly uri-escape the PAUSE download URL (sorry Olaf!)
